Version 18    2014-March-31

--Fixed a bug in resetting enemy internal level seeds after player dies.  
  In v17, after dying and returning to a level, an enemy's power configuration
  was preserved (no need to re-do work of changing an enemy's powers, correct),
  but the updated internal level seed for that enemy (so that re-entering
  an enemy always produces a different sub-level) was not preserved
  (incorrect).  Re-entering the same enemy after dying returned you to an 
  already-visited sub-level in that enemy.  This was also inconsistent with 
  what happened when you re-enter a power-up after dying (always see a new 
  internal level).  Fixed so that enemy enter counts (which are used to update
  seeds) are preserved across player death.

--Fixed so that power-up placement and selection is consistent with v16.
  A fix in v17 (flickering rise icon colors) involved extra calls to the
  random generator, thus unexpectedly changing the outcome of the power-up
  placement process.

--Added recording and playback of web server responses (so that flag data is
  replayed correctly during the playback of a recorded game).

--Fixed GCC 4.6.2 warnings found by Jukka Lankinen.

--Fixed bug in delete key repeat speed for pause screen text.

--Centralized font drawing code and fixed sub-pixel positioning error.

--Fixed pause-screen delete hold-down across multiple invocations of pause 
  screen.

--Fixed WASD mapping so that keys are not mapped for typing on pause screen.

--Fixed so that we stop grabbing mouse when the game is paused or in
  recorded-game-playback mode.  In windowed mode, this allows user to move the
  window while paused (thanks Shaun Froude).

--Fixed c++-11 narrowing warnings.

--Built against latest minorGems code to fix bug in app bundle name that
  affected certain modern MacOS versions.




Version 17   2011-June-22

--Fixed bug causing screen shots files to be unnecessarily doubled in size.
